Simplify and fix list spacing problems

--- a/src/_List.sass
+++ b/src/_List.sass
@@ -1,16 +1,19 @@
 ol,
 ul
-  list-style: none
-  margin-top: 0
-  padding-left: 0
+  // list-style: none
+  // margin-top: 0
+  // padding-left: 0
 
   ol,
   ul
-    font-size: 90%
-    margin: 1.5rem 0 1.5rem 3.0rem
+    // font-size: 90%
+    margin: 1.5rem 0
 
-ol
-  list-style: decimal inside
+// ol
+//   list-style: decimal inside
 
-ul
-  list-style: circle inside
+// ul
+//   list-style: circle inside
+
+li
+  margin-bottom: 0.5rem
