--- a/src/_Spacing.sass
+++ b/src/_Spacing.sass
@@ -1,9 +1,6 @@
-li
-  margin-bottom: 1.0rem
-
 p,
 pre,
 table,
 ol,
 ul
-  margin-bottom: 2.5rem
+  margin-bottom: 1.5rem
